# saltglass-steppe

./: .gitignore  BUILD_RELEASE.md  CAMERA_FIX.md  CHANGELOG.md  CONTENT_EXPANSION_SUMMARY.md  Cargo.toml  LICENSE  PARTICLE_EFFECTS.md  PERFORMANCE_OPTIMIZATIONS.md  PROCEDURAL_EFFECTS.md  QA_Testing.md  README.md  TECHNICAL_FEATURES_NEEDED.md  TODO.md  VISUAL_ANIMATIONS.md  build-release.sh  build-windows.sh  crafting_test.des  dialogue_test.des  generate_algorithm_configs.sh  light_test.des  map_features_test.des  meta_progress.ron  savegame.ron  test_all_algorithms.sh  test_all_configs.sh  trading_test.des
change_logs/: 20251214_MODULE_REFACTOR.md  20251222_FEATURE_IMPLEMENTATION.md
data/: adaptations.json  auto_explore_config.json  biome_profiles.json  biome_spawn_tables.json  books.json  constraint_rules.json  dialogues.json  dynamic_events.json  effects.json  enemies.json  factions.json  floors.json  generation_config.json  interactables.json  items.json  loot_tables.json  main_questline.json  map_features.json  narrative_integration.json  narrative_templates.json  npc_spawn_config.json  npcs.json  progression.json  psychic_abilities.json  quest_constraints.json  quests.json  recipes.json  render_config.json  spawn_tables.json  status_effects.json  structure_spawn_config.json  structure_templates.json  terrain_config.json  themes.json  traders.json  walls.json  weapons.json  world_generation_integration.json
debug_states/: .gitkeep
des_tests/: lighting_persistence.des
design_docs/: CONTENT_CREATION_GUIDE.md  CORE_MECHANICS.md  CREATIVE_DIRECTION_SUMMARY.md  DES_TODO.md  (+8 more)
(+651 files in other folders)
