[package]
name = "tui-rpg"
version = "0.1.0"
edition = "2024"
default-run = "tui-rpg"

[[bin]]
name = "mapgen-tool"
path = "src/bin/mapgen_tool.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
rand = "0.8"
rand_chacha = "0.3"
bracket-pathfinding = "0.8"
serde_json = "1"
once_cell = "1"
rayon = "1.11.0"
noise = "0.9.0"
textwrap = "0.16"
chrono = { version = "0.4", features = ["serde"] }
