[package]
name = "saltglass-steppe"
version = "0.1.0"
edition = "2024"
default-run = "saltglass-steppe"

[[bin]]
name = "mapgen-tool"
path = "src/bin/mapgen_tool.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
rand = "0.8"
rand_chacha = "0.3"
bracket-pathfinding = "0.8"
serde_json = "1"
once_cell = "1"
rayon = "1.11.0"
textwrap = "0.16"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
which = "6.0"
image = "0.25"
bracket-noise = "0.8.7"
bracket-algorithm-traits = "0.8.7"
smallvec = "1.15.1"
bracket-geometry = "0.8.7"
terrain-forge = "0.3.1"

[profile.release]
codegen-units = 1        # Better optimization
lto = true              # Link-time optimization
opt-level = 3           # Maximum speed optimization for TUI performance
strip = true            # Remove debug symbols
panic = "abort"         # Reduce binary size and avoid unwinding overhead

[dev-dependencies]
tempfile = "3.24.0"
